# intellij-rust-resolve-bug

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
