[package]
authors = ["Andreas Wass <wass.andreas@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "type-resolve-bug"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
#cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"
atsame54_xpro = "0.2.0"
#atsamd-hal = { version="0.12.0", features = ["same54p"] }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config.toml`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "type-resolve-bug"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
